prepare z-index for correct layering in search dropdown

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -5,7 +5,7 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 2 !important; /* Overlay background over all content */
+    z-index: 4 !important; /* Overlay background over all content */
     left: 0;
     top: 0;
     width: 100%;
@@ -17,7 +17,7 @@
   
   /* Modal pop-up */
   .modal-content {
-    z-index: 3 !important; /* Overlay modal over background */
+    z-index: 5 !important; /* Overlay modal over background */
     display: block;
     background-color: #ffe2b6;
     margin: 15% auto;
